Added Pawn Class Changed movement methods to return a coordinate Added methods to check if a piece has been captured and by who